<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="settings">Настройки</string>
    <string name="c_search">Поиск</string>
    <string name="c_media">Медиатека</string>
    <string name="c_tools">Настройки</string>
    <string name="c_share">Поделиться приложением</string>
    <string name="c_w_support">Написать в поддержку</string>
    <string name="c_lic">Пользовательское соглашение</string>
    <string name="c_theme_dark">Темная тема</string>
    <string name="search_activity">SearchActivity</string>
    <string name="activity_media">MediaActivity</string>
    <string name="theme_support">Сообщение разработчикам и разработчицам приложения Playlist Market</string>
    <string name="message_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_of_use">https://yandex.ru/legal/practicum_offer/</string>
    <string name="url_of_Practicum">https://practicum.yandex.ru/android-developer/</string>
    <string name="myEmail">kazakov.app@ya.ru</string>
    <string name="search">Поиск</string>
    <string name="c_search_clear">Очистить поисковый запрос</string>
    <string name="update">Обновить</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью</string>
    <string name="no_media">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="fav_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="download_failed">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history">Очистить историю</string>
    <string name="your_history">Ваша история</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="track_time">Длительность</string>
    <string name="time_start">00:00</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

