<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/i_p_10">

    <TableRow android:gravity="center_vertical">

        <TextView
            android:id="@+id/back_to_main"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/i_p_20"
            android:padding="5dp"
            android:text="@string/c_tools"
            android:textColor="@color/black"
            android:textFontWeight="@integer/fw_100"
            android:textSize="@dimen/fs_text_22"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_arrow_back" />
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:minHeight="@dimen/m_height_61">

        <TextView
            android:layout_weight="1"
            android:text="@string/c_theme_dark"
            android:textColor="@color/black"
            android:textFontWeight="@integer/fw_400"
            android:textSize="@dimen/fs_text_16"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="48dp"
            android:theme="@style/DarkThemeSwitchTheme" />
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:minHeight="@dimen/m_height_61">

        <TextView
            android:layout_weight="1"
            android:text="@string/c_share"
            android:textColor="@color/black"
            android:textFontWeight="@integer/fw_400"
            android:textSize="@dimen/fs_text_16"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_share" />
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:minHeight="@dimen/m_height_61">

        <TextView
            android:layout_weight="1"
            android:text="@string/c_w_support"
            android:textColor="@color/black"
            android:textFontWeight="@integer/fw_400"
            android:textSize="@dimen/fs_text_16"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_support" />
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:minHeight="@dimen/m_height_61">

        <TextView
            android:layout_weight="1"
            android:text="@string/c_lic"
            android:textColor="@color/black"
            android:textFontWeight="@integer/fw_400"
            android:textSize="@dimen/fs_text_16"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_right" />
    </TableRow>
</TableLayout>