<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/back_to_main_from_search"
        style="@style/ToolbarText"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:text="@string/search" />

    <FrameLayout
        style="@style/SearchBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_corner">

        <EditText
            android:id="@+id/etSearch"
            style="@style/SearchTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints="none"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/c_search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingEnd="14dp"
            android:singleLine="true"
            android:textSize="@dimen/fs_text_16"
            app:drawableStartCompat="@drawable/ic_search" />

        <ImageView
            android:id="@+id/iwClear"
            style="@style/IwClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/c_search_clear"
            android:src="@drawable/ic_close"
            android:visibility="gone" />

    </FrameLayout>

</LinearLayout>