<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textFontWeight="@integer/fw_500"
        android:textSize="@dimen/fs_text_22"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="24dp">

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/c_search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textFontWeight="@integer/fw_500"
            android:textSize="@dimen/fs_text_22"
            app:cornerRadius="@dimen/icp_16"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icp_10"
            app:iconSize="@dimen/icp_24"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/c_medias"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textFontWeight="@integer/fw_500"
            android:textSize="@dimen/fs_text_22"
            app:cornerRadius="@dimen/fs_text_16"
            app:icon="@drawable/ic_media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icp_10"
            app:iconSize="@dimen/icp_24"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/tools"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/c_tools"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textFontWeight="@integer/fw_500"
            android:textSize="@dimen/fs_text_22"
            app:cornerRadius="@dimen/icp_16"
            app:icon="@drawable/ic_tools"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icp_10"
            app:iconSize="@dimen/icp_24"
            app:iconTint="@color/black" />

    </LinearLayout>

</LinearLayout>